Narrower frequency display to avoid horizontal scrollbar.

--- a/ui/src/app/input-pane/input-pane.component.scss
+++ b/ui/src/app/input-pane/input-pane.component.scss
@@ -53,7 +53,7 @@ input {
   color: #AEF;
   display: inline-block;
   vertical-align: top;
-  width: 10em;
+  width: 9em;
   height: 2em;
 }
 
